k8s/prod/bikube.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bikube
  namespace: tekst-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bikube
  template:
    metadata:
      labels:
        app: bikube
    spec:
      priorityClassName: medium-priority
      containers:
        - name: app
          image: harbor.nb.no/tekst/bikube:<version>
          ports:
            - name: app-port
              containerPort: 8087
            - name: actuator-port
              containerPort: 8088
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: actuator-port
            initialDelaySeconds: 30
            periodSeconds: 20
            failureThreshold: 3
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: actuator-port
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 3
            timeoutSeconds: 1

---

apiVersion: v1
kind: Service
metadata:
  name: bikube
spec:
  ports:
    - port: 8087
      name: rest
      targetPort: 8087
    - port: 8088
      name: http
      targetPort: 8088
  selector:
    app: bikube
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bikube-ingress
  namespace: tekst-prod
spec:
  ingressClassName: nginx
  rules:
    - host: <host_url>
      http:
        paths:
          - backend:
              service:
                name: bikube
                port:
                  number: 8087
            path: /bikube
            pathType: Prefix
    - host: www.nb.no
      http:
        paths:
          - backend:
              service:
                name: bikube
                port:
                  number: 8087
            path: /bikube
            pathType: Prefix
    - host: produksjon.nb.no
      http:
        paths:
          - backend:
              service:
                name: bikube
                port:
                  number: 8087
            path: /bikube
            pathType: Prefix

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bikube-hugin-redirect
  namespace: tekst-prod
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /bikube/hugin/$2
spec:
  ingressClassName: nginx
  rules:
    - host: produksjon.nb.no
      http:
        paths:
          - backend:
              service:
                name: bikube
                port:
                  number: 8087
            path: /hugin(/|$)(.*)
            pathType: ImplementationSpecific
